-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.9.0
-
eb0b4d69b (dev), 844e906ba (6.9), f7e4b3579 (tqtc/lts-6.8), 957b438e4 (dev), 88b6a77d5 (dev), 183a630d9 (6.9), 38453dc87 (6.9), 5a7f7dc30 (tqtc/lts-6.8), b37ab5bd5 (tqtc/lts-6.8), 1d6f112c4 (dev), 42637d10f (6.9), 709aef745 (tqtc/lts-6.8)
-
Multimedia, weeks 15-16, Multimedia, weeks 18-19
VideoOutput as the source component of a Loader with an opacity animation results shortly in a crash when rapidly loading / unloading the source component.
This can be reproduced with the declarative-camera example with attached changes.
I tested with both MinGW and MSVC but on MinGW this crash doesn't seem to happen as easily (if at all).
Steps to reproduce the crash:
- Apply the changes to declarative-camera sample
- run the sample and wait (=> should crash in a moment)
Backtrace:
1 qt_message_fatal<QString &> qlogging.cpp 2140 0x7ff8ea532034 2 qt_message qlogging.cpp 381 0x7ff8ea531f08 3 QMessageLogger::fatal qlogging.cpp 884 0x7ff8ea52f2d3 4 qt_assert_x qassert.cpp 113 0x7ff8ea4e7c9e 5 QtPrivate::assertObjectType<QQuickVideoOutput> qobjectdefs_impl.h 107 0x7ff9072d2adf 6 QtPrivate::FunctorCall<std::integer_sequence<unsigned __int64>,QtPrivate::List<>,void,void (__cdecl QQuickVideoOutput:: *)(void)>::call qobjectdefs_impl.h 126 0x7ff9072d63fe 7 QtPrivate::FunctionPointer<void (__cdecl QQuickVideoOutput:: *)(void)>::call<QtPrivate::List<>,void> qobjectdefs_impl.h 175 0x7ff9072d2cbd 8 QtPrivate::QCallableObject<void (__cdecl QQuickVideoOutput:: *)(void),QtPrivate::List<>,void>::impl qobjectdefs_impl.h 548 0x7ff9072d6d6e 9 QtPrivate::QSlotObjectBase::call qobjectdefs_impl.h 461 0x7ff8ea664d73 10 doActivate<0> qobject.cpp 4138 0x7ff8ea724f80 11 QMetaObject::activate qobject.cpp 4199 0x7ff8ea70bc18 12 QQuickWindow::afterFrameEnd moc_qquickwindow.cpp 494 0x7ff8ebc0f0f5 13 QSGRenderThread::syncAndRender qsgthreadedrenderloop.cpp 808 0x7ff8ec183cde 14 QSGRenderThread::run qsgthreadedrenderloop.cpp 979 0x7ff8ec182621 15 QThreadPrivate::start qthread_win.cpp 174 0x7ff8eaacde0c 16 BaseThreadInitThunk KERNEL32 0x7ff9e096e8d7 17 RtlUserThreadStart ntdll 0x7ff9e2b514fc
- is duplicated by
-
QTBUG-136956 [REG 6.7.3-6.8.3] Sporadic crashes on QSGRenderThread::syncAndRender() when accessing the window pointer
-
- Closed
-
For Gerrit Dashboard: QTBUG-136052 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
640366,2 | QQuickVideoOutput: guard against direct QQuickWindow signal connections | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
641168,2 | QQuickVideoOutput: guard against direct QQuickWindow signal connections | 6.9 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
641299,2 | QQuickVideoOutput: guard against direct QQuickWindow signal connections | tqtc/lts-6.8 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |
641385,7 | QQuickVideoOutput: ensure signal disconnections | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
641571,5 | QQuickVideoOutput: simplify destructor guards | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
647932,7 | QQuickVideoOutput: test threaded signal emission | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
648348,2 | QQuickVideoOutput: ensure signal disconnections | 6.9 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
648349,2 | QQuickVideoOutput: simplify destructor guards | 6.9 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
648535,2 | QQuickVideoOutput: ensure signal disconnections | tqtc/lts-6.8 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |
648536,2 | QQuickVideoOutput: simplify destructor guards | tqtc/lts-6.8 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |
648886,2 | QQuickVideoOutput: test threaded signal emission | 6.9 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
649016,3 | QQuickVideoOutput: test threaded signal emission | tqtc/lts-6.8 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |