QQuickVideoOutput: guard against direct QQuickWindow signal connections

`QQuickVideoOutput` connects to `QQuickWindow` signals that can call
into `QQuickVideoOutput` from the render thread.
This is potential racy when the signal is delivered while/shortly after
the the instance is destroyed.

We add a destructor guard which:
* prevents the object from being destroyed while the render thread
signal is executed.
* prevents the signal from being executed if the QQuickVideoOutput has
already been destroyed.

Fixes: QTBUG-136052
Change-Id: Ib4d1e45c013986945c25207adf23a57ab4c277c9
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>
(cherry picked from commit eb0b4d69bee1ed3fbe4b089a100085e568f98947)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 844e906bad9455e6050d095c3852a2595a513ad0)